# mozhi

./: .gitignore  .gitlab-ci.yml  Cargo.toml  build.rs  readme.md  todo
examples/: factorial.ms  factorial.മൊഴി  guess_the_number.മൊഴി  hello.മൊഴി  input.മൊഴി  loop1.മൊഴി  welcome.മൊഴി
src/: lib.rs
src/executor/: ast.rs  datatype.rs  error.rs  mod.rs  test.rs
src/lexer/: error.rs  keywords.rs  mod.rs  tokens.rs
src/parser/: grammar.lalrpop  grammar.rs  test.rs
